--- a/DP1-G12-350-1257/DP1.qsf
+++ b/DP1-G12-350-1257/DP1.qsf
@@ -37,8 +37,8 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Arria II GX"
-set_global_assignment -name DEVICE EP2AGX45DF29C6
+set_global_assignment -name FAMILY "Cyclone IV E"
+set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name TOP_LEVEL_ENTITY EN_Adder
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:55:35  OCTOBER 01, 2025"
